--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ canvas {
  </HEAD>
  
  <BODY>
-  <h1>This 1</h1>
+<h1> Bang </h1>
    <div class="box">
       <canvas id="pinkboard"></canvas>
    </div>
